--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+**/src/main/java/com/example/healthgenie/global/constants
+
+**/src/main/resources
+
+
+**/src/test/resources
