--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,27 +1,35 @@
-server:
-  servlet:
-    encoding:
-      force-response: true
+# live server
+devtools:
+  livereload:
+    enabled: true
 
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1
     username: sa
     password:
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
-  h2:
-    console:
-      enabled: true
-
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  sql:
+    init:
+      data-locations: classpath*:db/h2/data.sql
 logging:
   level:
     org:
-      hibernate:
-        SQL: DEBUG
+      springframework:
+        orm:
+          jpa: DEBUG
+server:
+  servlet:
+    encoding:
+      force-response: true
