--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 
     // Dto validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
 }
 
 tasks.named('test') {
