--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
+
+    // query parameter 를 보여준다 -> 운영시스템에 적용하려면 꼭 성능테스트를 하고 사용하는 것이 좋다
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 }
 
 tasks.named('test') {
