feat, make docker file and docker compose file

--- a/build.gradle
+++ b/build.gradle
@@ -80,3 +80,7 @@ tasks.named('test') {
     useJUnitPlatform()
     systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
 }
+
+bootJar {
+    archiveFileName = 'app.jar'
+}
