--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,5 @@
 ##      MYSQL_HOST: mysql
 ##      MYSQL_USER: root
 ##      MYSQL_ROOT_PASSWORD: password적기
-##      MYSQL_DATABASE: 스키마이름
+##      MYSQL_DATABASE: health_genie
 ##      MYSQL_PORT:3306
