chore: oauth2 관련 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     testImplementation 'com.h2database:h2'
     testAnnotationProcessor 'org.projectlombok:lombok' //추가
 
+    // oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
     // jwt 를 위한 dependency 추가
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
