--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    // implementation 'com.sun.mail:jakarta.mail:2.1.0'
+
 
     // itextpdf -> for downloading & generating the PDF file
     implementation 'com.itextpdf:itextpdf:5.0.6'
@@ -83,6 +83,9 @@ dependencies {
 
     // query parameter 를 보여준다 -> 운영시스템에 적용하려면 꼭 성능테스트를 하고 사용하는 것이 좋다
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
