--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.18.3'
     implementation 'com.auth0:auth0-spring-security-api:1.5.2'
 
+    // s3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
