--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // SQL 파라미터 바인딩 정보 로깅 라이브러리 추가 - p6spy
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
     // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
