--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     // SQL 파라미터 바인딩 정보 로깅 라이브러리 추가 - p6spy
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
+    // Web Socket & STOMP
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-stomp'
+
     // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
