fix email verify update

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     testImplementation 'com.h2database:h2'
     testAnnotationProcessor 'org.projectlombok:lombok' //추가
 
+    // univcert / okhttp, simple 사용
+    implementation 'com.github.in-seo:univcert:master-SNAPSHOT'
+    implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.2'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
     // oauth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
