chore: 운영 서버 소셜 로그인 yml 수정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,6 +9,15 @@ spring:
     username: ENC(t73nhff/1j7IxUmVnxqCkg==)
     password: ENC(cqOISBwQJ9FHHnb97SmW/WbwDHjl7nCP)
 
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            redirect-uri: "http://3.37.195.242:1234/login/oauth2/code/google"
+          kakao:
+            redirect-uri: "http://3.37.195.242:1234/login/oauth2/code/kakao"
+
   jpa:
     hibernate:
       ddl-auto: update
