--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches:
       - production    # production이라는 브런치로 푸쉬했을 때 실행
-      - 'releases/**' 
+      - 'releases/**'
 
 env:
   AWS_REGION: ap-northeast-2
   AWS_S3_BUCKET: app-release-files
-  AWS_CODE_BUCKET_NAME : bucket-healthgenie    # 기억해두라고 했던 버킷 이름
-  AWS_CODE_DEPLOY_APPLICATION: cd-healthgenie-cicd    # 기억해두라고 했던 애플리케이션 이름
-  AWS_CODE_DEPLOY_GROUP: cd-healthgenie  # 기억해두라고 했던 배포 그룹 이름
+  AWS_CODE_BUCKET_NAME : bucket-healthgenie
+  AWS_CODE_DEPLOY_APPLICATION: cd-application-cicd
+  AWS_CODE_DEPLOY_GROUP: cd-health-genie      
 
 jobs:
   build-with-gradle:
