--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           password: ${{ secrets.EC2_PASSWORD }}
-          port: ${{ secrets.EC2_SSH_PORT }}
+          #port: ${{ secrets.EC2_SSH_PORT }}
           timeout: 60s
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/health_genie
