fix : test file code 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,8 @@ jobs:
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
-          password: ${{ secrets.EC2_PASSWORD }}
-          #port: ${{ secrets.EC2_SSH_PORT }}
+          #password: ${{ secrets.EC2_PASSWORD }}
+          port: ${{ secrets.EC2_SSH_PORT }}
           timeout: 60s
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/health_genie
