--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/health_genie .
           docker push ${{ secrets.DOCKER_USERNAME }}/health_genie
 
-      # AWS EC2 Server Connect & Docker 명령어 실행 (8)
+      # AWS EC2 Server Connect & Docker 명령어 실행
       - name: AWS EC2 Connection
         uses: appleboy/ssh-action@master
         with:
