--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: 프로젝트 빌드
-        run: ./gradlew clean build -x test
-        #run: ./gradlew clean build -Pjasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
+        #run: ./gradlew clean build -x test
+        run: ./gradlew build -Djasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
 
       - name: AWS credential 설정
         uses: aws-actions/configure-aws-credentials@v1
