--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-    systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
+    // systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
+    systemProperty 'jasypt.encryptor.password', System.getProperties().get("jasypt.encryptor.password")
 }
 
 bootJar {
