fix : gradle fix

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -84,8 +84,8 @@ spring:
       max-request-size: 10MB
   data:
     redis:
-      host: localhost
-      port: 6379 # redis port
+      host: 172.31.46.108
+      port: 6379
 
 
 
