--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,10 +8,10 @@ spring:
   profiles:
     active: test
 
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:
+  #  datasource:
+  #    url: jdbc:h2:mem:testdb
+  #    username: sa
+  #    password:
 
   devtools:
     livereload:
