--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     // systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
-    systemProperty 'jasypt.encryptor.password', System.getProperties().get("jasypt.encryptor.password")
+    systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
 }
 
 bootJar {
