--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,11 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: 프로젝트 빌드
-        #run: ./gradlew clean build -x test
         run: ./gradlew clean build -Pjasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
+
+      - name: Make zip file
+        run: zip -r ./$GITHUB_SHA.zip .
+        shell: bash
 
       - name: AWS credential 설정
         uses: aws-actions/configure-aws-credentials@v1
@@ -54,25 +57,34 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/health_genie .
           docker push ${{ secrets.DOCKER_USERNAME }}/health_genie
 
+
+      - name: Code Deploy
+        run: |
+          aws deploy create-deployment \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --application-name ${{ env.AWS_CODE_DEPLOY_APPLICATION }} \
+          --deployment-group-name ${{ env.AWS_CODE_DEPLOY_APPLICATION }} \
+          --s3-location bucket=${{ env.AWS_CODE_BUCKET_NAME }},bundleType=zip,key=$GITHUB_SHA.zip
+
       # AWS EC2 Server Connect & Docker 명령어 실행
-      - name: AWS EC2 Connection
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_KEY }}
-          port: ${{ secrets.EC2_SSH_PORT }}
-          timeout: 60s
-          script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/health_genie
-            sudo docker stop health_genie_1
-            docker rm -f health_genie_1
-            docker run \
-            --name=health_genie_1 \
-            --restart unless-stopped \
-            -e JAVA_OPTS="-Djasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}" \
-            -e TZ=Asia/Seoul \
-            -p 1234:1234 \
-            -d \
-            --net mybridge \
-            ${{ secrets.DOCKER_USERNAME }}/health_genie
+#      - name: AWS EC2 Connection
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.EC2_HOST }}
+#          username: ubuntu
+#          key: ${{ secrets.EC2_KEY }}
+#          port: ${{ secrets.EC2_SSH_PORT }}
+#          timeout: 60s
+#          script: |
+#            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/health_genie
+#            sudo docker stop health_genie_1
+#            docker rm -f health_genie_1
+#            docker run \
+#            --name=health_genie_1 \
+#            --restart unless-stopped \
+#            -e JAVA_OPTS="-Djasypt.encryptor.password=${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}" \
+#            -e TZ=Asia/Seoul \
+#            -p 1234:1234 \
+#            -d \
+#            --net mybridge \
+#            ${{ secrets.DOCKER_USERNAME }}/health_genie
