--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 1234
   error:
     include-message: always
-    include-binding-errors : always
+    include-binding-errors: always
 
 spring:
   profiles:
@@ -10,9 +10,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url : jdbc:mysql://localhost:3306/health_genie
-    username : ENC(YRdY+LUGkMey+Qmv6nq+HQ==)
-    password : ENC(LRJ5u1ya+4nqNzAQVmpSPw==)
+    url: jdbc:mysql://localhost:3306/health_genie
+    username: ENC(YRdY+LUGkMey+Qmv6nq+HQ==)
+    password: ENC(LRJ5u1ya+4nqNzAQVmpSPw==)
 
   devtools:
     livereload:
@@ -23,11 +23,11 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         validator:
-          apply_to_ddl : false
+          apply_to_ddl: false
         format_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 1000 # 배치 사이즈 조절을 통해서 N+1이 나더라도 최소화 시킨다
