chore: OpenFeign 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,8 @@ dependencies {
     // jackson
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
-
+    // open feign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.3'
 }
 
 tasks.named('test') {
