--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,6 +87,10 @@ spring:
       host: localhost
       port: 6379 # redis port
 
+    web:
+      pageable:
+        default-page-size: 10
+
 
 
 # for encode of password
