chore: 운영 서버 로그 레벨

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -26,3 +26,11 @@ spring:
     redis:
       host: ENC(B/Hj+f1ZSv5Cl1RjirBi9jgl+QNyDXJn)
       port: 6379
+
+# hibernate logging
+logging:
+  level:
+    p6spy: error
+    org:
+      springframework:
+        security: warn
