--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,9 +14,9 @@ spring:
       client:
         registration:
           google:
-            redirect-uri: "http://localhost:3000/login/oauth2/code/google"
+            redirect-uri: "https://서비스.한국/login/oauth2/code/google"
           kakao:
-            redirect-uri: "http://localhost:3000/login/oauth2/code/kakao"
+            redirect-uri: "https://서비스.한국/login/oauth2/code/kakao"
 
   jpa:
     hibernate:
