--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,9 @@ dependencies {
 
     // jackson
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+    // open feign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.3'
 }
 
 tasks.named('test') {
